Removed Unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 
 /out
 /.idea
+
+AVLTree.java
+BFS.java
+BST.java
+KadanesAlgo.java
+Kruskal.java
+LongestIncreasingSubsequence.java
+MatrixChainMultiplication.java
+Trie.java
+OptimalMerging.java
